--- a/workday-integrations.html
+++ b/workday-integrations.html
@@ -13,8 +13,18 @@
             <a href="index.html" class="logo">Vostatech</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="nav-item">
+                    <a href="integrations.html">Integrations</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="boomi-integrations.html">Boomi Integrations</a></li>
+                        <li><a href="salesforce-integrations.html">Salesforce Integrations</a></li>
+                        <li><a href="netsuite-integrations.html">NetSuite Integrations</a></li>
+                        <li><a href="dynamics-integrations.html">Dynamics 365 Integrations</a></li>
+                        <li><a href="sap-integrations.html">SAP Integrations</a></li>
+                    </ul>
+                </li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
