--- a/dynamics-integrations.html
+++ b/dynamics-integrations.html
@@ -24,6 +24,15 @@
     <meta name="twitter:title" content="Microsoft Dynamics Integrations | Vostatech LTD">
     <meta name="twitter:description" content="Expert Microsoft Dynamics integration services connecting Dynamics 365 with Salesforce, NetSuite, SAP, ecommerce, logistics, and internal systems.">
     
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J5273X2DC7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-J5273X2DC7');
+    </script>
+    
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
