--- a/salesforce-integrations.html
+++ b/salesforce-integrations.html
@@ -24,6 +24,15 @@
     <meta name="twitter:title" content="Salesforce Integrations | Vostatech LTD">
     <meta name="twitter:description" content="Expert Salesforce integration services connecting Salesforce with ERP, finance, and operations systems.">
     
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J5273X2DC7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-J5273X2DC7');
+    </script>
+    
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
