--- a/workday-integrations.html
+++ b/workday-integrations.html
@@ -24,6 +24,15 @@
     <meta name="twitter:title" content="Workday Integrations | Vostatech LTD">
     <meta name="twitter:description" content="Expert Workday integration services connecting Workday with HR systems, payroll providers, financial systems, and talent management platforms.">
     
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-J5273X2DC7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-J5273X2DC7');
+    </script>
+    
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
