--- a/boomi-integrations.html
+++ b/boomi-integrations.html
@@ -44,8 +44,8 @@
         "name": "Vostatech LTD",
         "url": "https://vostatech.io"
       },
-      "description": "Expert Boomi integration services including integration design, architecture, end-to-end implementation, connector configuration, API design, data transformation, and troubleshooting.",
-      "areaServed": ["GB", "EU"],
+      "description": "Expert Boomi integration services including integration design, architecture, end-to-end implementation, connector configuration, API design, data transformation, and troubleshooting for clients across the UK, EU, US, and Middle East.",
+      "areaServed": ["GB", "EU", "US", "Middle East"],
       "offers": {
         "@type": "Offer",
         "description": "Boomi integration services for enterprise clients"
