--- a/integrations.html
+++ b/integrations.html
@@ -45,8 +45,8 @@
         "name": "Vostatech LTD",
         "url": "https://vostatech.io"
       },
-      "description": "Expert integration services for connecting CRM, ERP, HR, finance, and operations systems. Specializing in integration architecture, iPaaS implementation, API development, and data synchronization.",
-      "areaServed": ["GB", "EU"],
+      "description": "Expert integration services for connecting CRM, ERP, HR, finance, and operations systems. Specializing in integration architecture, iPaaS implementation, API development, and data synchronization for clients across the UK, EU, US, and Middle East.",
+      "areaServed": ["GB", "EU", "US", "Middle East"],
       "offers": {
         "@type": "Offer",
         "description": "Enterprise integration services using Boomi, MuleSoft, and custom APIs"
