--- a/jira-integrations.html
+++ b/jira-integrations.html
@@ -44,8 +44,8 @@
         "name": "Vostatech LTD",
         "url": "https://vostatech.io"
       },
-      "description": "Expert JIRA integration services connecting JIRA with GitHub, GitLab, ServiceNow, CI/CD tools, Confluence, Slack, and project management platforms.",
-      "areaServed": ["GB", "EU"],
+      "description": "Expert JIRA integration services connecting JIRA with GitHub, GitLab, ServiceNow, CI/CD tools, Confluence, Slack, and project management platforms for teams across the UK, EU, US, and Middle East.",
+      "areaServed": ["GB", "EU", "US", "Middle East"],
       "offers": {
         "@type": "Offer",
         "description": "JIRA integration services for development and project teams"
