--- a/netsuite-integrations.html
+++ b/netsuite-integrations.html
@@ -44,8 +44,8 @@
         "name": "Vostatech LTD",
         "url": "https://vostatech.io"
       },
-      "description": "Expert NetSuite integration services for finance, operations, and sales teams. Connect NetSuite with Salesforce, SAP, Dynamics, ecommerce platforms, and logistics systems.",
-      "areaServed": ["GB", "EU"],
+      "description": "Expert NetSuite integration services for finance, operations, and sales teams. Connect NetSuite with Salesforce, SAP, Dynamics, ecommerce platforms, and logistics systems for organisations across the UK, EU, US, and Middle East.",
+      "areaServed": ["GB", "EU", "US", "Middle East"],
       "offers": {
         "@type": "Offer",
         "description": "NetSuite integration services using Boomi, MuleSoft, and SuiteTalk APIs"
