--- a/salesforce-integrations.html
+++ b/salesforce-integrations.html
@@ -44,8 +44,8 @@
         "name": "Vostatech LTD",
         "url": "https://vostatech.io"
       },
-      "description": "Expert Salesforce integration services for fast-growing teams. Connect Salesforce with NetSuite, SAP, Dynamics, and custom internal systems using Boomi, MuleSoft, and custom APIs.",
-      "areaServed": ["GB", "EU"],
+      "description": "Expert Salesforce integration services for fast-growing teams. Connect Salesforce with NetSuite, SAP, Dynamics, and custom internal systems using Boomi, MuleSoft, and custom APIs for clients across the UK, EU, US, and Middle East.",
+      "areaServed": ["GB", "EU", "US", "Middle East"],
       "offers": {
         "@type": "Offer",
         "description": "Salesforce integration services for operational alignment and financial accuracy"
