--- a/sap-integrations.html
+++ b/sap-integrations.html
@@ -44,8 +44,8 @@
         "name": "Vostatech LTD",
         "url": "https://vostatech.io"
       },
-      "description": "Expert SAP integration services for finance, supply chain, and operations. Connect SAP S/4HANA and ECC with Salesforce, Dynamics, NetSuite, manufacturing systems, and logistics platforms.",
-      "areaServed": ["GB", "EU"],
+      "description": "Expert SAP integration services for finance, supply chain, and operations. Connect SAP S/4HANA and ECC with Salesforce, Dynamics, NetSuite, manufacturing systems, and logistics platforms for enterprises across the UK, EU, US, and Middle East.",
+      "areaServed": ["GB", "EU", "US", "Middle East"],
       "offers": {
         "@type": "Offer",
         "description": "SAP integration services using IDoc, BAPI, OData, REST APIs, Boomi, and MuleSoft"
