--- a/workday-integrations.html
+++ b/workday-integrations.html
@@ -44,8 +44,8 @@
         "name": "Vostatech LTD",
         "url": "https://vostatech.io"
       },
-      "description": "Expert Workday integration services for HR, finance, and talent teams. Connect Workday with payroll providers, benefits administration, recruiting platforms, financial systems, and identity management.",
-      "areaServed": ["GB", "EU"],
+      "description": "Expert Workday integration services for HR, finance, and talent teams. Connect Workday with payroll providers, benefits administration, recruiting platforms, financial systems, and identity management for organisations across the UK, EU, US, and Middle East.",
+      "areaServed": ["GB", "EU", "US", "Middle East"],
       "offers": {
         "@type": "Offer",
         "description": "Workday integration services using Workday REST API, SOAP, Boomi, and MuleSoft"
